<resources>
    <string name="app_name">Contact</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="area">Area</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="email">Email</string>
    <string name="cake">Cake</string>
    <string name="birthDay">Birthday</string>
    <string name="search">search</string>
    <string name="content_description_search">search</string>
    <string name="more">more</string>
    <string name="content_description_more">more</string>
</resources>